# domini

./: .env.op.example  .gitignore  Cargo.toml
src/: state.rs  types.rs  utils.rs
src/agent/: exec.rs  id_management.rs  mod.rs  poll_command.rs  registration.rs  server_health.rs
src/handlers/: agent.rs  agents.rs  commands.rs  db.rs  mod.rs  models.rs  operator.rs  results.rs  server.rs
src/operator/: broadcast_command.rs  interactive_shell.rs  list_agents.rs  mod.rs  send_command.rs
