[package]
name = "domini"
version = "0.1.0"
edition = "2024"

[target.armv7-linux-androideabi]
linker = "/home/bacal/android-ndk-r27c/toolchains/llvm/prebuilt/linux-x86_64/bin/arm-linux-androideabi-clang"
ar = "/home/bacal/android-ndk-r27c/toolchains/llvm/prebuilt/linux-x86_64/bin/llvm-ar"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4", "serde"] }
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
reqwest = { version = "0.11", features = ["blocking", "rustls-tls", "json"] }
hostname = "0.4.1"
dirs = "6.0.0"
platform-info = "2.0.5"


[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "operator"
path = "src/bin/operator.rs"

[[bin]]
name = "agent"
path = "src/bin/agent.rs"
