[package]
name = "domini"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "agent"
path = "src/bin/agent.rs"

[[bin]]
name = "operator"
path = "src/bin/operator.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
warp = { version = "0.3", features = ["tls"] }
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
uuid = { version = "1.0", features = ["v4"] }
reqwest = { version = "0.11", features = ["json"] }
hostname = "0.3"
tokio-tungstenite = "0.17"
futures = "0.3.31"
dotenvy = "0.15.7"
dirs = "6.0.0"
anyhow = "1.0.98"
whoami = "1.6.0"
